--- a/readme
+++ b/readme
@@ -1,4 +1,4 @@
 Git is a distribut versin control system.
 Git is free softward.
 Git has a mutable indes called stage.
-Git tracks changes.
+Git tracks changes of files.
